--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
     <head>
         <title>SisCB</title>
-        <link type="text/css" rel="stylesheet" media="screen" href="assets/css/jquery_mobile.css">
+        <link type="text/css" rel="stylesheet" media="screen" href="assets/css/jquerymobile.css">
         <link type="text/css" rel="stylesheet" media="screen" href="assets/css/master.css">
         <script type="text/javascript" src="phonegap.js"></script>
         <script type="text/javascript" src="assets/js/jquery.js"></script>
-        <script type="text/javascript" src="assets/js/jquery_mobile.js"></script>
+        <script type="text/javascript" src="assets/js/jquerymobile.js"></script>
         <script type="text/javascript" src="assets/js/app.js"></script>
     </head>
     
